--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -5,12 +5,12 @@
     min-height: 10rem;
     width: 100%;
     margin-bottom: 15px;
-    padding-bottom: 20px;
+    padding-bottom: 40px;
 }
 
 .grid {
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: auto auto auto auto;
     height: 100%;
 }
 
@@ -19,7 +19,7 @@
     flex-direction: column;
     justify-content: center;
     margin-left: 20px;
-    margin-right: 50px;
+    margin-right: 40px;
 }
 
 .contact-details {
@@ -29,8 +29,8 @@
     flex-wrap: wrap;
     padding-top: 2rem;
     font-size: medium;
-    margin-left: 50px;
-    margin-right: 50px;
+    margin-left: 20px;
+    margin-right: 40px;
 }
 
 .footerlogo {
@@ -77,17 +77,15 @@ pre {
     justify-content: center;
     font-size: medium;
     padding-top: 2rem;
-    margin-left: 100px;
-    margin-right: 50px;
-}
-
-.width {
-    width: 90%;
+    margin-left: 30px;
+    margin-right: 40px;
 }
 
 @media screen and (max-width: 900px) {
     .main {
+        display: flex;
         font-size: 14px;
+        width: fit-content;
     }
     .contact-details {
        padding-top: 2.2rem;
@@ -111,4 +109,12 @@ pre {
     .last-text{
         font-size: 10px;
     }
+
+    .refernce {
+        visibility: hidden;
+        clear: both;
+        float: left;
+        display: none;
+    }
+
 }
